--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
-   port: 8888
+   port: 8000
+spring:
+   application:
+      name: eureka-server
 eureka:
    instance:
       hostname: localhost
@@ -8,3 +11,6 @@ eureka:
       fetch-registry: false
    service-url: 
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+   server:
+      enableSelfPreservation: false
+      evictionIntervalTimerInMs: 4000
