--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,6 @@
 
 	<!-- 统一管理jar包版本 -->
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-		<java.version>1.8</java.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<junit.version>4.12</junit.version>
-		<log4j.version>1.2.17</log4j.version>
-		<lombok.version>1.16.18</lombok.version>
-		<mysql.version>5.1.47</mysql.version>
-		<druid.version>1.1.16</druid.version>
-
 		<springBoot.version>2.2.6.RELEASE</springBoot.version>
 		<springCloud.version>Hoxton.SR8</springCloud.version>
 	</properties>
@@ -37,16 +25,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<!-- 改造高可用(git方式) -->
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-config-server</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-starter-eureka</artifactId>
-			</dependency>
-			<!-- 改造高可用 end -->
 			<!-- springCloud end -->
 			<!-- springBoot -->
 			<dependency>
@@ -67,17 +45,29 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- 注册服务所需jar -->
+		<dependency>
+			<!-- 配置中心客户端 -->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-config-client</artifactId>
+		</dependency>
+		<dependency>
+			<!-- 监控管理(如：状态页和健康指标) -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<!-- feign -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-		<!-- springboot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -115,5 +105,6 @@
 		<module>eureka</module>
 		<module>ajie-test</module>
 		<module>ajie-flowEngine</module>
+		<module>ajie-configServer</module>
 	</modules>
 </project>
