feat(*):增加eureka服务高可用配置

--- a/ajie-flowEngine/src/main/resources/bootstrap.yml
+++ b/ajie-flowEngine/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-   port: 8002
+   port: 8200
 spring:
    application:
       name: flowEngine
@@ -12,5 +12,7 @@ spring:
             serviceId: config-server
 eureka:
    client:
+      register-with-eureka: true
+      fetch-registry: true
       serviceUrl:
-         defaultZone: http://localhost:8000/eureka/
+         defaultZone: http://eureka8000.com:8000/eureka/,http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
