--- a/ajie-configServer/src/main/resources/application.yml
+++ b/ajie-configServer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-   port: 8001
+   port: 8100
 spring:
    application:
       name: config-server
@@ -14,5 +14,7 @@ spring:
                password: ajie19960201ajie
 eureka:
    client:
+      register-with-eureka: true
+      fetch-registry: true
       serviceUrl:
-         defaultZone: http://localhost:8000/eureka/
+         defaultZone: http://eureka8000.com:8000/eureka/,http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
