--- a/eureka-8001/pom.xml
+++ b/eureka-8001/pom.xml
@@ -7,14 +7,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.ajie.eureka</groupId>
-	<artifactId>eureka</artifactId>
-	<description>注册中心</description>
-
+	<artifactId>eureka-8001</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 	</dependencies>
-
 </project>
