--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -11,4 +11,5 @@ eureka:
       register-with-eureka: true
       fetch-registry: true
       service-url: 
+         #defaultZone: http://localhost:8000/eureka/
          defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
