--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<!-- hystrix -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -113,6 +118,6 @@
 		<module>ajie-configServer</module>
 		<module>eureka-8001</module>
 		<module>eureka-8002</module>
-		<module>ajie-ribbon</module>
+		<module>ajie-hystrixDashboard</module>
 	</modules>
 </project>
